--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,30 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #000000;
+  --primary: #0014ff;
+  --secondary: #010ed0;
+  --main: #0a0d31;
+  --up: #00a63e;
+  --down: #ff0000;
+  --degrad: #ffa500;
+  --upLight: #dbfce7;
+  --downLight: #ffe2e2;
+  --degradLight: #fef9c2;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
+  --color-main: var(--main);
+  --color-up: var(--up);
+  --color-down: var(--down);
+  --color-degrad: var(--degard);
+  --color-up-light: var(--upLight);
+  --color-down-light: var(--downLight);
+  --color-degrad-light: var(--degardLight);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
