--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,10 @@
   --foreground: #000000;
   --primary: #0014ff;
   --secondary: #010ed0;
+  --back: #a3d7f1;
   --main: #0a0d31;
+  --text: #242627;
+  --input-text: #444444;
   --up: #00a63e;
   --down: #ff0000;
   --degrad: #ffa500;
@@ -19,13 +22,15 @@
   --color-foreground: var(--foreground);
   --color-primary: var(--primary);
   --color-secondary: var(--secondary);
+  --color-back: var(--back);
   --color-main: var(--main);
+  --color-text: var(--text);
+  --color-input-text: var(--input-text);
   --color-up: var(--up);
   --color-down: var(--down);
   --color-degrad: var(--degard);
   --color-up-light: var(--upLight);
   --color-down-light: var(--downLight);
   --color-degrad-light: var(--degardLight);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-interTight: var(--font-interTight);
 }
