feat: enhance login and registration forms with validation and error handling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
   --upLight: #dbfce7;
   --downLight: #ffe2e2;
   --degradLight: #fef9c2;
+  font-family: "'Inter Tight', 'Inter Tight Fallback'", sans-serif;
 }
 
 @theme inline {
